--- a/.tav.yml
+++ b/.tav.yml
@@ -1,5 +1,10 @@
 # This file is used by tool TAV - Test All Versions.
 # See: https://github.com/watson/test-all-versions
+'@apollo/server':
+  versions: ^4.0.0
+  peerDependencies: graphql@^16.0.0
+  node: '>=14.16.0'
+  commands: node test/instrumentation/modules/@apollo/server.test.js
 
 generic-pool:
   versions: ^2.0.0 || ^3.1.0
