--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "unicode-byte-truncate": "^1.0.0"
   },
   "devDependencies": {
+    "@apollo/server": "^4.2.2",
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
