test, ci: some small changes
- Avoid test, lint, & edge CI workflows for .md and .asciidoc changes in
  any subdir.
- Tweak the "types" test (npm run test:types) to catch the case of
  `apm.flush()` with no callback returning a promise.

--- a/.github/workflows/edge.yml
+++ b/.github/workflows/edge.yml
@@ -11,8 +11,8 @@ on:
     branches:
       - main
     paths-ignore:
-      - '**.md'
-      - '**.asciidoc'
+      - '**/**.md'
+      - '**/**.asciidoc'
       - 'docs/**'
       - 'examples/**'
 
