--- a/.github/workflows/updatecli.yml
+++ b/.github/workflows/updatecli.yml
@@ -1,4 +1,4 @@
-name: update-specs
+name: updatecli
 
 on:
   workflow_dispatch: ~
@@ -11,19 +11,33 @@ permissions:
 jobs:
   bump:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        pipeline:
+          - ./.ci/update-specs.yml
+          - ./.ci/update-json-specs.yml
     steps:
       - uses: actions/checkout@v3
       - uses: elastic/apm-pipeline-library/.github/actions/updatecli@current
-        env:
-          BRANCH_NAME: ${{ github.ref_name }}
         with:
           vaultUrl: ${{ secrets.VAULT_ADDR }}
           vaultRoleId: ${{ secrets.VAULT_ROLE_ID }}
           vaultSecretId: ${{ secrets.VAULT_SECRET_ID }}
-          pipeline: ./.ci/update-specs.yml
-      - if: failure()
-        uses: elastic/apm-pipeline-library/.github/actions/notify-build-status@current
+          pipeline: ${{ matrix.pipeline }}
+  notify:
+    if: always()
+    needs:
+      - bump
+    runs-on: ubuntu-latest
+    steps:
+      - id: check
+        uses: elastic/apm-pipeline-library/.github/actions/check-dependent-jobs@current
         with:
+          needs: ${{ toJSON(needs) }}
+      - uses: elastic/apm-pipeline-library/.github/actions/notify-build-status@current
+        with:
+          status: ${{ steps.check.outputs.status }}
           vaultUrl: ${{ secrets.VAULT_ADDR }}
           vaultRoleId: ${{ secrets.VAULT_ROLE_ID }}
           vaultSecretId: ${{ secrets.VAULT_SECRET_ID }}
