--- a/.github/workflows/updatecli.yml
+++ b/.github/workflows/updatecli.yml
@@ -11,12 +11,6 @@ permissions:
 jobs:
   bump:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        pipeline:
-          - ./.ci/update-specs.yml
-          - ./.ci/update-json-specs.yml
     steps:
       - uses: actions/checkout@v3
       - uses: elastic/apm-pipeline-library/.github/actions/updatecli@current
@@ -24,17 +18,7 @@ jobs:
           vaultUrl: ${{ secrets.VAULT_ADDR }}
           vaultRoleId: ${{ secrets.VAULT_ROLE_ID }}
           vaultSecretId: ${{ secrets.VAULT_SECRET_ID }}
-          pipeline: ${{ matrix.pipeline }}
-  notify:
-    if: always()
-    needs:
-      - bump
-    runs-on: ubuntu-latest
-    steps:
-      - id: check
-        uses: elastic/apm-pipeline-library/.github/actions/check-dependent-jobs@current
-        with:
-          needs: ${{ toJSON(needs) }}
+          pipeline: .ci/updatecli.d
       - uses: elastic/apm-pipeline-library/.github/actions/notify-build-status@current
         with:
           status: ${{ steps.check.outputs.status }}
