labels: drop array-valued attrs and warn; cleaning out XXXs

--- a/examples/opentelemetry-metrics/.env.template
+++ b/examples/opentelemetry-metrics/.env.template
@@ -6,6 +6,9 @@
 #ELASTIC_APM_SERVER_URL=...
 #ELASTIC_APM_SECRET_TOKEN=...
 
+OTEL_EXPORTER_OTLP_ENDPOINT=$ELASTIC_APM_SERVER_URL
+OTEL_EXPORTER_OTLP_HEADERS="Authorization=Bearer $ELASTIC_APM_SECRET_TOKEN"
+
 # Just for a faster demo, configure the Elastic APM agent to collect and send
 # metrics more frequently.
 ELASTIC_APM_METRICS_INTERVAL=5s
