--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,7 @@ on:
   pull_request:
     branches:
     - main
+    - feature/run-on-windows
     paths-ignore:
     - '**/*.md'
     - '**/*.asciidoc'
