--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -14,6 +14,7 @@ on:
   pull_request:
     branches:
     - main
+    - feature/run-on-windows
     paths-ignore:
     - '**/*.md'
     - '**/*.asciidoc'
