chore: to help with testing

--- a/.ci/Makefile
+++ b/.ci/Makefile
@@ -5,7 +5,7 @@ DIST_DIR = /build/dist/nodejs
 LAMBDA_LAYER_ZIP_FILE = ../build/dist/elastic-apm-node-lambda-layer.zip
 DOCKER_IMAGE_NAME ?= observability/apm-agent-nodejs
 DOCKER_REGISTRY = docker.elastic.co
-AGENT_VERSION = $(shell echo $${GITHUB_REF_NAME} | cut -f 2 -d 'v')
+AGENT_VERSION = $(shell echo $${GITHUB_REF_NAME} | cut -f 2 -d 'v' | sed 's#/merge##g') ## TODO: sed is not required when running for tag releases.
 ## TODO: as long as the GITHUB_REF_NAME points to a PR then let's use this temporary workaround.
 BRANCH_NAME = $(shell echo $${GITHUB_REF_NAME} | sed 's#/merge##g')
 export AWS_FOLDER
