--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,8 +10,9 @@ on:
 env:
   DOCKER_REGISTRY: docker.elastic.co
   SUFFIX_ARN_FILE: 'arn-file.md'
+  ## TODO: this env variables should be transformed given the version.
   RELEASE_NOTES_URL: 'https://www.elastic.co/guide/en/apm/agent/nodejs/current/release-notes-3.x.html#release-notes-3.43.0'
-  ELASTIC_LAYER_NAME: 'elastic-apm-node-ver-1-2-3'
+  ELASTIC_LAYER_NAME: 'elastic-apm-node-ver-0-0-1'
   DOCKER_IMAGE_NAME: observability-ci/apm-agent-nodejs-v1v
 
 permissions:
@@ -54,15 +55,13 @@ jobs:
             secret/observability-team/ci/service-account/apm-aws-lambda access_key_id | AWS_ACCESS_KEY_ID ;
             secret/observability-team/ci/service-account/apm-aws-lambda secret_access_key | AWS_SECRET_ACCESS_KEY
 
-      - run: echo 'make -C .ci publish-in-all-aws-regions create-arn-file'
+      - run: make -C .ci publish-in-all-aws-regions create-arn-file
         env:
           GH_TOKEN: ${{ github.token }}
-          VERSION: ${{ env.GITHUB_REF_NAME }}
 
       - run: echo 'make -C .ci github-release'
         env:
           GH_TOKEN: ${{ github.token }}
-          VERSION: ${{ env.GITHUB_REF_NAME }}
 
       - uses: hashicorp/vault-action@v2.5.0
         with:
