--- a/.ci/Makefile
+++ b/.ci/Makefile
@@ -5,6 +5,7 @@ DIST_DIR = /build/dist/nodejs
 LAMBDA_LAYER_ZIP_FILE = ../build/dist/elastic-apm-node-lambda-layer.zip
 DOCKER_IMAGE_NAME ?= observability/apm-agent-nodejs
 DOCKER_REGISTRY = docker.elastic.co
+SUFFIX_ARN_FILE = arn-file.md
 AGENT_VERSION = $(shell echo $${GITHUB_REF_NAME} | cut -f 2 -d 'v' | sed 's#/merge##g') ## TODO: sed is not required when running for tag releases.
 ## TODO: as long as the GITHUB_REF_NAME points to a PR then let's use this temporary workaround.
 BRANCH_NAME = $(shell echo $${GITHUB_REF_NAME} | sed 's#/merge##g')
@@ -101,11 +102,6 @@ endif
 validate-ref-name:
 ifndef GITHUB_REF_NAME
 	$(error GITHUB_REF_NAME is undefined)
-endif
-
-validate-suffix-arn-file:
-ifndef SUFFIX_ARN_FILE
-	$(error SUFFIX_ARN_FILE is undefined)
 endif
 
 validate-layer-name:
