--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,10 +9,7 @@ on:
 
 env:
   DOCKER_REGISTRY: docker.elastic.co
-  SUFFIX_ARN_FILE: 'arn-file.md'
-  ## TODO: this env variables should be transformed given the version.
-  RELEASE_NOTES_URL: 'https://www.elastic.co/guide/en/apm/agent/nodejs/current/release-notes-3.x.html#release-notes-3.43.0'
-  ELASTIC_LAYER_NAME: 'elastic-apm-node-ver-0-0-1'
+  ## TODO: remove this
   DOCKER_IMAGE_NAME: observability-ci/apm-agent-nodejs-v1v
 
 permissions:
@@ -55,7 +52,13 @@ jobs:
             secret/observability-team/ci/service-account/apm-aws-lambda access_key_id | AWS_ACCESS_KEY_ID ;
             secret/observability-team/ci/service-account/apm-aws-lambda secret_access_key | AWS_SECRET_ACCESS_KEY
 
-      - run: make -C .ci publish-in-all-aws-regions create-arn-file
+      - run: |-
+          VERSION=$(echo $GITHUB_REF_NAME | cut -f 2 -d 'v' | sed 's#/merge##g')
+          MAJOR_VERSION=$(cut -d '.' -f 1 <<< "$VERSION")
+          ELASTIC_LAYER_VERSION=$(sed 's#\.#-#g' <<< "$VERSION")
+          RELEASE_NOTES_URL="https://www.elastic.co/guide/en/apm/agent/nodejs/current/release-notes-${MAJOR_VERSION}.x.html#release-notes-${VERSION}" \
+          ELASTIC_LAYER_NAME=elastic-apm-node-ver-${ELASTIC_LAYER_VERSION} \
+          make -C .ci publish-in-all-aws-regions create-arn-file
         env:
           GH_TOKEN: ${{ github.token }}
 
