--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -86,7 +86,7 @@ jobs:
           secretId: ${{ secrets.VAULT_SECRET_ID }}
           channel: "#apm-agent-node"
           message: |
-            :large_green_circle: [${{ github.repository }}] Release *${{ github.ref_name }}* published.
+            :elasticheart: [${{ github.repository }}] Release *${{ github.ref_name }}* published.
             Build: (<${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|here>)
 
       - if: ${{ failure() }}
@@ -98,5 +98,5 @@ jobs:
           secretId: ${{ secrets.VAULT_SECRET_ID }}
           channel: "#apm-agent-node"
           message: |
-            :large_yellow_circle: [${{ github.repository }}] Release *${{ github.ref_name }}* could not be published.
+            :broken_heart: [${{ github.repository }}] Release *${{ github.ref_name }}* could not be published.
             Build: (<${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|here>)
