--- a/.ci/Makefile
+++ b/.ci/Makefile
@@ -3,10 +3,14 @@ MAKEFLAGS += --no-print-directory
 AWS_FOLDER = ../build/aws
 DIST_DIR = /build/dist/nodejs
 LAMBDA_LAYER_ZIP_FILE = ../build/dist/elastic-apm-node-lambda-layer.zip
-DOCKER_IMAGE_NAME ?= observability/apm-agent-nodejs
+DOCKER_IMAGE_NAME = observability/apm-agent-nodejs
 DOCKER_REGISTRY = docker.elastic.co
 SUFFIX_ARN_FILE = arn-file.md
-AGENT_VERSION = $(shell echo $${GITHUB_REF_NAME} | cut -f 2 -d 'v')
+AGENT_VERSION = $(subst v,,$(GITHUB_REF_NAME))
+MAJOR_VERSION = $(shell cut -d '.' -f 1 <<< $(AGENT_VERSION))
+ELASTIC_LAYER_VERSION = $(subst .,-,$(AGENT_VERSION))
+RELEASE_NOTES_URL = https://www.elastic.co/guide/en/apm/agent/nodejs/current/release-notes-$(MAJOR_VERSION).x.html\#release-notes-$(AGENT_VERSION)
+ELASTIC_LAYER_NAME = elastic-apm-node-ver-$(ELASTIC_LAYER_VERSION)
 export AWS_FOLDER
 
 .PHONY: dist
@@ -14,6 +18,15 @@ dist: validate-ref-name
 	../dev-utils/make-distribution.sh
 	@mkdir -p $(AWS_FOLDER)
 	cp $(LAMBDA_LAYER_ZIP_FILE) $(AWS_FOLDER)/elastic-apm-node-lambda-layer-$(GITHUB_REF_NAME).zip
+
+# Debug env variables created on the fly
+debug-env:
+	@echo "GITHUB_REF_NAME=$${GITHUB_REF_NAME}"
+	@echo "AGENT_VERSION=$(AGENT_VERSION)"
+	@echo "MAJOR_VERSION=$(MAJOR_VERSION)"
+	@echo "ELASTIC_LAYER_VERSION=$(ELASTIC_LAYER_VERSION)"
+	@echo "RELEASE_NOTES_URL=$(RELEASE_NOTES_URL)"
+	@echo "ELASTIC_LAYER_NAME=$(ELASTIC_LAYER_NAME)"
 
 .PHONY: clean
 clean:
