--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,13 +47,7 @@ jobs:
             secret/observability-team/ci/service-account/apm-aws-lambda secret_access_key | AWS_SECRET_ACCESS_KEY
 
       - name: Publish AWS lambda
-        run: |-
-          VERSION=$(cut -f 2 -d 'v' <<< $GITHUB_REF_NAME)
-          MAJOR_VERSION=$(cut -d '.' -f 1 <<< "$VERSION")
-          ELASTIC_LAYER_VERSION=$(sed 's#\.#-#g' <<< "$VERSION")
-          RELEASE_NOTES_URL="https://www.elastic.co/guide/en/apm/agent/nodejs/current/release-notes-${MAJOR_VERSION}.x.html#release-notes-${VERSION}" \
-          ELASTIC_LAYER_NAME=elastic-apm-node-ver-${ELASTIC_LAYER_VERSION} \
-          make -C .ci publish-in-all-aws-regions create-arn-file
+        run: make -C .ci publish-in-all-aws-regions create-arn-file
         env:
           GH_TOKEN: ${{ github.token }}
 
