--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -153,3 +153,14 @@ jobs:
         path: "test_output/*.junit.xml"
         type: "junit"
         githubToken: ${{ secrets.GITHUB_TOKEN }}
+
+  test-windows:
+    runs-on: windows-latest
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-node@v3
+      with:
+        node-version: 14
+    - run: npm install
+    - run: npm ls --all || true
+    - run: npm test
