action: otherwise it will fail on windows with ". is not recognized as an internal or external command"

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -163,4 +163,4 @@ jobs:
         node-version: 14
     - run: npm install
     - run: npm ls --all || true
-    - run: npm test
+    - run: node test/test.js
